2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added vino.

2004-05-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added orca.

2004-05-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched.

2004-05-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: regexxer should be in fifth-toe. Fix.

2004-05-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: regexxer has been added.

2004-05-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-applets has been branched.

2004-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eel and nautilus have been branched.

2004-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-session and gnome-desktop
	have been branched.

2004-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel has been branched.

2004-05-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-media has been branched.

2004-05-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gtk+ and glib branches on
	GNOME 2.8 status pages aswell. GNOME 2.8 will also use the
	gtk+ gtk-2-4 and glib glib-2-4 branches.

2004-05-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtk+ and glib have been branched.

2004-05-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnome, libgnomecanvas and
	libgnomeui have been branched.

2004-05-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gpdf has been branched.

2004-04-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprint and libgnomeprintui
	have been branched.

2004-04-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched.

2004-04-21  Christian Rose  <menthos@menthos.com>
