@@ -36,17 +36,6 @@
     </group>
   </release>
 
-  <module name="acme">
-    <version release="gnome-2.8">
-      <component name="acme" dir="acme" group="extras">
-        <podir dir="po"/>
-        <potname name="acme.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="alleyoop">
     <version release="gnome-2.8">
       <component name="alleyoop" dir="alleyoop" group="extras">
@@ -158,17 +147,6 @@
       <component name="blam" dir="blam" group="extras">
 	<podir dir="po"/>
 	<potname name="blam.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
-  <module name="bonobo-config">
-    <version release="gnome-2.8">
-      <component name="bonobo-config" dir="bonobo-config" group="extras">
-	<podir dir="po"/>
-	<potname name="bonobo-config.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
@@ -385,6 +363,17 @@
       </component>
     </version>
   </module>
+	<module name="evolution-webcal">
+		<version release="gnome-2.8">
+			<component name="evolution-webcal" dir="evolution-webcal" group="extras">
+				<podir dir="po"/>
+				<potname name="evolution-webcal.pot"/>
+				<branch name="HEAD"/>
+				<regenerate/>
+				<download/>
+			</component>
+		</version>
+	</module>
   <module name="file-roller">
     <version release="gnome-2.6">
       <component name="file-roller" dir="file-roller" group="desktop">
@@ -2500,3 +2489,12 @@
     </version>
   </module>
 </translation-status>
+
+
+<!--
+Local Variables:
+mode: xml
+sgml-indent-step: 2
+tab-width: 2
+End:
+-->
