@@ -1,3 +1,10 @@
+2004-05-27  Rodney Dawes  <dobey@novell.com>
+
+	* translation-status.xml: Acme is part of control-center now
+	bonobo-config code hasn't been touched in 3 years, it's dead
+	Add evolution-webcal
+	Add comment section with local variables for emacs xml mode
+
 2004-05-27  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added vino.
